--- a/startdjango/Templates/events/EvenetListView.html
+++ b/startdjango/Templates/events/EvenetListView.html
@@ -4,8 +4,10 @@
 
 <ul>
     {% for e in events%}
-        <li>{{e.title}}</li> <li>{{e.description}}</li> <br>
-    {% endfor %}
+        {% comment %} <li>{{e.title}}</li> <li>{{e.description}}</li> <br> {% endcomment %}
+        <a href="{% url 'Event_DetailClass' e.id %}" > {{e.title}}</a>
+<img src="{{e.image.url}}" >
+        {% endfor %}
 
 </ul>
 {% endblock  %}
