--- a/startdjango/Templates/base.html
+++ b/startdjango/Templates/base.html
@@ -18,5 +18,6 @@
     </div>
   </body>
   <script src="{% static 'js/bootstrap.min.js' %}"/>
-  
+  {% comment %} {% include 'footer.html' %} {% endcomment %}
+
   </html>
