--- a/startdjango/Templates/events/EvenetListView.html
+++ b/startdjango/Templates/events/EvenetListView.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1> liste des events</h1>
+<h1> liste des events 13</h1>
 
 <ul>
     {% for e in events%}
         {% comment %} <li>{{e.title}}</li> <li>{{e.description}}</li> <br> {% endcomment %}
         <a href="{% url 'Event_DetailClass' e.id %}" > {{e.title}}</a>
-<img src="{{e.image.url}}" />
-        {% endfor %}
+        <img src="{{e.image.url}}" />
+        <a href="{% url 'update_event_view' e.id %}" class="btn btn-success"> modifier</a>
+        <br>
+
+     {% endfor %}
 
 </ul>
 {% endblock  %}
